--- a/player/CMakeLists.txt
+++ b/player/CMakeLists.txt
@@ -8,9 +8,9 @@ project(player)
 set(CMAKE_CXX_FLAGS "-std=c++14")
 
 set(SOURCE_FILES
-        greedy.cpp
+        greedyC.cpp
         raceState.hpp
         raceState.cpp)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "/Users/albicilla/programming/samurAI/samurai17/player/")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "/Users/albicilla/programming/samurAI/samurai17/player/beam91A/")
 
 add_executable(player ${SOURCE_FILES})
