--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Software2017-18"]
 	path = Software2017-18
-	url = https://github.com/SamurAI-Coding/Software2017-18
+	url = https://github.com/SamurAI-Coding/Software2017-18.git
