コース生成関係を更新 結果出力に.outを追加

--- a/player/CMakeLists.txt
+++ b/player/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_FLAGS "-std=c++14")
 set(SOURCE_FILES
         greedyC.cpp
         raceState.hpp
-        raceState.cpp)
+        raceState.cpp reinforce.cc.cpp)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "/Users/albicilla/programming/samurAI/samurai17/player/beamZ/")
 
 add_executable(player ${SOURCE_FILES})
