--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
         "name": "samuraiEnv",
         "type": "python",
         "request": "launch",
-        "stopOnEntry": true,
+        // "stopOnEntry": true,
         "pythonPath": "${config:python.pythonPath}",
         "program": "${workspaceFolder}/gymEnv/human_play.py",
         "cwd": "${workspaceFolder}/gymEnv",
